--- a/Pipfile
+++ b/Pipfile
@@ -7,10 +7,17 @@ name = "pypi"
 latest = "python polling_analysis.py"
 
 [packages]
-numpy = "*"
+bottleneck = "*"
+dash = "*"
+folium = "*"
+geopandas = "*"
+numpy = "==1.23.0"
 pandas = "*"
+mapclassify = "*"
 matplotlib = "*"
+openpyxl = "*"
 pandas-flavor = "*"
+plotly = "*"
 pyjanitor = "*"
 seaborn = "*"
 statsmodels = "*"
